# propgen

./: Cargo.toml
data/hello/: Cargo.toml
data/hello/src/: lib.rs  main.rs  random.rs
data/hello/tests/: integration.rs
propgen_macro/: Cargo.toml
propgen_macro/src/: lib.rs
src/: lib.rs  main.rs  parser.rs
