[workspace]
resolver = "3"
members = ["propgen_macro"]

[package]
name = "propgen"
version = "0.1.0"
edition = "2024"

[dependencies]
ra_ap_project_model = "0.0.301"
ra_ap_hir = "0.0.301"
ra_ap_ide = "0.0.301"
ra_ap_ide_db = "0.0.301"
ra_ap_paths = "0.0.301"
ra_ap_load-cargo = "0.0.301"
ra_ap_syntax = "0.0.301"
